<resources>
    <string name="app_name">天气</string>
    <string name="locationName">请输入地名</string>
    <string name="button_searchInfo">查询</string>
    <string name="forecast">天气预报</string>
    <string name="current_temp">- -</string>
    <string name="nowCity">当前城市：</string>
    <string name="weatherSituation">天气情况：</string>
    <string name="textView_currentDate">当前日期：</string>
    <string name="textView_highestTemp">最高温度：</string>
    <string name="textView_lowestTemp">最低温度：</string>
</resources>
